{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 10871,
  "lineage": "f36e03d1-beba-da02-0869-ee451da8585a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-2:993407081893:transit-gateway/tgw-0356d0a11933d0023",
            "association_default_route_table_id": "tgw-rtb-0c31d2b4699a348c3",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway for Oregon region",
            "dns_support": "enable",
            "id": "tgw-0356d0a11933d0023",
            "multicast_support": "disable",
            "owner_id": "993407081893",
            "propagation_default_route_table_id": "tgw-rtb-0c31d2b4699a348c3",
            "tags": {
              "Name": "transit-gateway-oregon"
            },
            "tags_all": {
              "Name": "transit-gateway-oregon"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:993407081893:transit-gateway/tgw-0e95f762736327645",
            "association_default_route_table_id": "tgw-rtb-085c32341ba81d43f",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway for Virginia region",
            "dns_support": "enable",
            "id": "tgw-0e95f762736327645",
            "multicast_support": "disable",
            "owner_id": "993407081893",
            "propagation_default_route_table_id": "tgw-rtb-085c32341ba81d43f",
            "tags": {
              "Name": "transit-gateway-virginia"
            },
            "tags_all": {
              "Name": "transit-gateway-virginia"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0676a735c5f8e67c4",
            "arn": "arn:aws:ec2:us-west-2:993407081893:instance/i-03241418f7deb932e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-03241418f7deb932e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d84482e414455b6f",
            "private_dns": "ip-10-1-1-55.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.55",
            "public_dns": "ec2-54-188-30-149.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.30.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b27ed2a573eba13c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "Bastion Oregon"
            },
            "tags_all": {
              "Name": "Bastion Oregon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fb3f7f34491f544"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.bastion_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8b3e527208c8cf",
            "arn": "arn:aws:ec2:us-east-1:993407081893:instance/i-0f3235cf2b4a7f003",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-0f3235cf2b4a7f003",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b1913c1ade6bf942",
            "private_dns": "ip-10-0-1-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-54-172-62-39.compute-1.amazonaws.com",
            "public_ip": "54.172.62.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058e56b4b6f6e0eb1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "Bastion Virginia"
            },
            "tags_all": {
              "Name": "Bastion Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c1106b9fd4b8519"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.bastion_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6cc701211a663f2",
            "arn": "arn:aws:ec2:us-west-2:993407081893:instance/i-0ca1e6dda7c61db95",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-0ca1e6dda7c61db95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f9ad06d62fbd4e3b",
            "private_dns": "ip-10-1-1-45.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.45",
            "public_dns": "ec2-52-36-99-72.us-west-2.compute.amazonaws.com",
            "public_ip": "52.36.99.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0372b5b181199a076",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "GitLab Oregon"
            },
            "tags_all": {
              "Name": "GitLab Oregon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc926e3645b544e4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.gitlab_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2926c986c7eb348",
            "arn": "arn:aws:ec2:us-east-1:993407081893:instance/i-019137a0a4b4aa216",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-019137a0a4b4aa216",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f19bae130ff28c2",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-54-144-65-142.compute-1.amazonaws.com",
            "public_ip": "54.144.65.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a9f4632a53a7b0fb",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "GitLab Virginia"
            },
            "tags_all": {
              "Name": "GitLab Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063577edb438bf2bb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.gitlab_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jasper_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0676a735c5f8e67c4",
            "arn": "arn:aws:ec2:us-west-2:993407081893:instance/i-07adc090ef48e9391",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-07adc090ef48e9391",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06401718c5c797d83",
            "private_dns": "ip-10-1-1-176.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.176",
            "public_dns": "ec2-35-167-68-217.us-west-2.compute.amazonaws.com",
            "public_ip": "35.167.68.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-061073e3f89ec46b2",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "Jasper Oregon"
            },
            "tags_all": {
              "Name": "Jasper Oregon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069142975000ff51e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.jasper_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jasper_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8b3e527208c8cf",
            "arn": "arn:aws:ec2:us-east-1:993407081893:instance/i-0b0c54e4be50e10e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-0b0c54e4be50e10e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0117c5164f773366e",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-3-208-18-22.compute-1.amazonaws.com",
            "public_ip": "3.208.18.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a27a2157392c9c33",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "Jasper Virginia"
            },
            "tags_all": {
              "Name": "Jasper Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be5b58ad167eab02"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.jasper_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitor_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff21d6d6b6003b0",
            "arn": "arn:aws:ec2:us-west-2:993407081893:instance/i-03526c966a9aa97d7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-03526c966a9aa97d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09fc32c9a733d149b",
            "private_dns": "ip-10-1-1-187.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.187",
            "public_dns": "ec2-54-186-39-197.us-west-2.compute.amazonaws.com",
            "public_ip": "54.186.39.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fbe46842caf627ee",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "Monitor Oregon"
            },
            "tags_all": {
              "Name": "Monitor Oregon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0791452ed58c68b33"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.monitor_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitor_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09634e8f6f4163b0e",
            "arn": "arn:aws:ec2:us-east-1:993407081893:instance/i-0f08719ffd8e46d49",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-0f08719ffd8e46d49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0474064c76c57e178",
            "private_dns": "ip-10-0-1-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-18-212-250-214.compute-1.amazonaws.com",
            "public_ip": "18.212.250.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ce4d6049735164f",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "Monitor Virginia"
            },
            "tags_all": {
              "Name": "Monitor Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a8b8765eb606162"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.monitor_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad3f99eafc4c44f4",
            "arn": "arn:aws:ec2:us-west-2:993407081893:instance/i-0e14eb3e85fce373e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-0e14eb3e85fce373e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c3f8e236f5049e9",
            "private_dns": "ip-10-1-1-115.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.115",
            "public_dns": "ec2-18-236-93-193.us-west-2.compute.amazonaws.com",
            "public_ip": "18.236.93.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aa6106da7bc1e29c",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "OpenVPN Oregon"
            },
            "tags_all": {
              "Name": "OpenVPN Oregon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c39f2668111c218"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.openvpn_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095f86ec226de8b8e",
            "arn": "arn:aws:ec2:us-east-1:993407081893:instance/i-0d4fb2bfb3241d0dd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-0d4fb2bfb3241d0dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07beb31ac855837d5",
            "private_dns": "ip-10-0-1-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.19",
            "public_dns": "ec2-52-91-53-74.compute-1.amazonaws.com",
            "public_ip": "52.91.53.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0391ae3f3265d1332",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "OpenVPN Virginia"
            },
            "tags_all": {
              "Name": "OpenVPN Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c9795fe92ce8023"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.openvpn_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pentaho_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0676a735c5f8e67c4",
            "arn": "arn:aws:ec2:us-west-2:993407081893:instance/i-06e7565473ca21ebc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-06e7565473ca21ebc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d31ef17478e9583",
            "private_dns": "ip-10-1-1-200.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.200",
            "public_dns": "ec2-35-86-102-78.us-west-2.compute.amazonaws.com",
            "public_ip": "35.86.102.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b91ecba86acf14f3",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "Pentaho Oregon"
            },
            "tags_all": {
              "Name": "Pentaho Oregon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b09e73b2184547a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.pentaho_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pentaho_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8b3e527208c8cf",
            "arn": "arn:aws:ec2:us-east-1:993407081893:instance/i-0ae381057bbedc55e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-0ae381057bbedc55e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b06a8d7b967bbe7",
            "private_dns": "ip-10-0-1-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.170",
            "public_dns": "ec2-52-91-94-241.compute-1.amazonaws.com",
            "public_ip": "52.91.94.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07bb5fd3af3cd9012",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "Pentaho Virginia"
            },
            "tags_all": {
              "Name": "Pentaho Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01bf347e8964c56f3"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.pentaho_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0676a735c5f8e67c4",
            "arn": "arn:aws:ec2:us-west-2:993407081893:instance/i-0169b3090f7b9ec94",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-0169b3090f7b9ec94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dabb7d357bd992f8",
            "private_dns": "ip-10-1-1-181.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.181",
            "public_dns": "ec2-54-245-171-19.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.171.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0150b31795d62e499",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "SonarQube Oregon"
            },
            "tags_all": {
              "Name": "SonarQube Oregon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04bff7dd3576012e8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.sonarqube_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8b3e527208c8cf",
            "arn": "arn:aws:ec2:us-east-1:993407081893:instance/i-084f64220b520b655",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-084f64220b520b655",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef1fe18fd88d0b70",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-54-221-50-237.compute-1.amazonaws.com",
            "public_ip": "54.221.50.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-029a0130b609daa74",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "SonarQube Virginia"
            },
            "tags_all": {
              "Name": "SonarQube Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3b6c731188d61de"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.sonarqube_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tickets_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0676a735c5f8e67c4",
            "arn": "arn:aws:ec2:us-west-2:993407081893:instance/i-06321a06c43ca9dce",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-06321a06c43ca9dce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-090e21dff5d09ce50",
            "private_dns": "ip-10-1-1-231.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.231",
            "public_dns": "ec2-34-222-119-18.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.119.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-001b0ec374038989f",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "Tickets Oregon"
            },
            "tags_all": {
              "Name": "Tickets Oregon"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f126e7762ce760a0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.tickets_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tickets_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8b3e527208c8cf",
            "arn": "arn:aws:ec2:us-east-1:993407081893:instance/i-036126ba698240d39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ssm_instance_profile",
            "id": "i-036126ba698240d39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "BaseKeyAcces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e377c5f4fb951856",
            "private_dns": "ip-10-0-1-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "public_dns": "ec2-54-167-75-176.compute-1.amazonaws.com",
            "public_ip": "54.167.75.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-005930351ef475c18",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "Tickets Virginia"
            },
            "tags_all": {
              "Name": "Tickets Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d715c9132c70d20"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.tickets_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gitlab_rule_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/gitlab-tg-oregon/e4cc7768ab9cc7c5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/7b39be0d8e86f4ee",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "gitlab.isolated-oregon.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/7b39be0d8e86f4ee",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "priority": 20,
            "tags": {
              "Name": "gitlab_rule_oregon"
            },
            "tags_all": {
              "Name": "gitlab_rule_oregon"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.gitlab_tg_oregon",
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.alb_oregon.aws_lb.this",
            "module.alb_oregon.aws_lb_listener.https",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gitlab_rule_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/gitlab-tg-virginia/c2b4b69bbe641375",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/a656c8b347058a9f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "gitlab.isolated-virginia.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/a656c8b347058a9f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "priority": 20,
            "tags": {
              "Name": "gitlab_rule_virginia"
            },
            "tags_all": {
              "Name": "gitlab_rule_virginia"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.gitlab_tg_virginia",
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.alb_virginia.aws_lb.this",
            "module.alb_virginia.aws_lb_listener.https",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "jasper_rule_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/jasper-tg-oregon/ccc66bd142cf48a5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/38f31e654877d4c7",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "reports.isolated-oregon.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/38f31e654877d4c7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "priority": 19,
            "tags": {
              "Name": "jasper_rule_oregon"
            },
            "tags_all": {
              "Name": "jasper_rule_oregon"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.jasper_tg_oregon",
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.alb_oregon.aws_lb.this",
            "module.alb_oregon.aws_lb_listener.https",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "jasper_rule_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/jasper-tg-virginia/cfa06967def0ae3f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/ba9d077e1d6db9d0",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "reports.isolated-virginia.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/ba9d077e1d6db9d0",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "priority": 19,
            "tags": {
              "Name": "jasper_rule_virginia"
            },
            "tags_all": {
              "Name": "jasper_rule_virginia"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.jasper_tg_virginia",
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.alb_virginia.aws_lb.this",
            "module.alb_virginia.aws_lb_listener.https",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "monitor_rule_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/monitor-tg-oregon/187abe6f7eb2404c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/7f6db6f03bc48f35",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "monitor.isolated-oregon.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/7f6db6f03bc48f35",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "priority": 16,
            "tags": {
              "Name": "monitor_rule_oregon"
            },
            "tags_all": {
              "Name": "monitor_rule_oregon"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.monitor_tg_oregon",
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.alb_oregon.aws_lb.this",
            "module.alb_oregon.aws_lb_listener.https",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "monitor_rule_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/monitor-tg-virginia/9bd526456e7bfe83",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/0d8afbcc41dfea48",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "monitor.isolated-virginia.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/0d8afbcc41dfea48",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "priority": 16,
            "tags": {
              "Name": "monitor_rule_virginia"
            },
            "tags_all": {
              "Name": "monitor_rule_virginia"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.monitor_tg_virginia",
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.alb_virginia.aws_lb.this",
            "module.alb_virginia.aws_lb_listener.https",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "openvpn_rule_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/openvpn-tg-oregon/6e72dcda2b6c3dfd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/cec55ccb62a8e4da",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "openvpn.isolated-oregon.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/cec55ccb62a8e4da",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "priority": 15,
            "tags": {
              "Name": "openvpn_rule_oregon"
            },
            "tags_all": {
              "Name": "openvpn_rule_oregon"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.openvpn_tg_oregon",
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.alb_oregon.aws_lb.this",
            "module.alb_oregon.aws_lb_listener.https",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "openvpn_rule_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/openvpn-tg-virginia/0120a628be72f468",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/0c5630be8bd17dcc",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "openvpn.isolated-virginia.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/0c5630be8bd17dcc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "priority": 15,
            "tags": {
              "Name": "openvpn_rule_virginia"
            },
            "tags_all": {
              "Name": "openvpn_rule_virginia"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.openvpn_tg_virginia",
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.alb_virginia.aws_lb.this",
            "module.alb_virginia.aws_lb_listener.https",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "pentaho_rule_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/pentaho-tg-oregon/f2b682f2db84abab",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/bdd399aa140ea846",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "pentaho.isolated-oregon.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/bdd399aa140ea846",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "priority": 18,
            "tags": {
              "Name": "pentaho_rule_oregon"
            },
            "tags_all": {
              "Name": "pentaho_rule_oregon"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.pentaho_tg_oregon",
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.alb_oregon.aws_lb.this",
            "module.alb_oregon.aws_lb_listener.https",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "pentaho_rule_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/pentaho-tg-virginia/b415081e31d44099",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/56090f9ba85afaa4",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "pentaho.isolated-virginia.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/56090f9ba85afaa4",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "priority": 18,
            "tags": {
              "Name": "pentaho_rule_virginia"
            },
            "tags_all": {
              "Name": "pentaho_rule_virginia"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.pentaho_tg_virginia",
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.alb_virginia.aws_lb.this",
            "module.alb_virginia.aws_lb_listener.https",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "sonarqube_rule_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/sonarqube-tg-oregon/5804a266b8c3c7ce",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/37b06fe807bc42ec",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "sonarqube.isolated-oregon.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/37b06fe807bc42ec",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "priority": 17,
            "tags": {
              "Name": "sonarqube_rule_oregon"
            },
            "tags_all": {
              "Name": "sonarqube_rule_oregon"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.sonarqube_tg_oregon",
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.alb_oregon.aws_lb.this",
            "module.alb_oregon.aws_lb_listener.https",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "sonarqube_rule_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/sonarqube-tg-virginia/a49dfc54405ec207",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/422c1c59912c6f38",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "sonarqube.isolated-virginia.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/422c1c59912c6f38",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "priority": 17,
            "tags": {
              "Name": "sonarqube_rule_virginia"
            },
            "tags_all": {
              "Name": "sonarqube_rule_virginia"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.sonarqube_tg_virginia",
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.alb_virginia.aws_lb.this",
            "module.alb_virginia.aws_lb_listener.https",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tickets_rule_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/tickets-tg-oregon/7b3370261dd6fb23",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/a9df4c90e6520c67",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tickets.isolated-oregon.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener-rule/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e/a9df4c90e6520c67",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "priority": 14,
            "tags": {
              "Name": "tickets_rule_oregon"
            },
            "tags_all": {
              "Name": "tickets_rule_oregon"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.tickets_tg_oregon",
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.alb_oregon.aws_lb.this",
            "module.alb_oregon.aws_lb_listener.https",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tickets_rule_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/tickets-tg-virginia/9156881092cf5459",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/59ae1ed1e37478a1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tickets.isolated-virginia.kubixcorp.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener-rule/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339/59ae1ed1e37478a1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "priority": 14,
            "tags": {
              "Name": "tickets_rule_virginia"
            },
            "tags_all": {
              "Name": "tickets_rule_virginia"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.tickets_tg_virginia",
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.alb_virginia.aws_lb.this",
            "module.alb_virginia.aws_lb_listener.https",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gitlab_tg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/gitlab-tg-oregon/e4cc7768ab9cc7c5",
            "arn_suffix": "targetgroup/gitlab-tg-oregon/e4cc7768ab9cc7c5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/users/sign_in",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/gitlab-tg-oregon/e4cc7768ab9cc7c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gitlab-tg-oregon",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gitlab_tg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/gitlab-tg-virginia/c2b4b69bbe641375",
            "arn_suffix": "targetgroup/gitlab-tg-virginia/c2b4b69bbe641375",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/users/sign_in",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/gitlab-tg-virginia/c2b4b69bbe641375",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gitlab-tg-virginia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jasper_tg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/jasper-tg-oregon/ccc66bd142cf48a5",
            "arn_suffix": "targetgroup/jasper-tg-oregon/ccc66bd142cf48a5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/jasper-tg-oregon/ccc66bd142cf48a5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jasper-tg-oregon",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jasper_tg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/jasper-tg-virginia/cfa06967def0ae3f",
            "arn_suffix": "targetgroup/jasper-tg-virginia/cfa06967def0ae3f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/jasper-tg-virginia/cfa06967def0ae3f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jasper-tg-virginia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "monitor_tg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/monitor-tg-oregon/187abe6f7eb2404c",
            "arn_suffix": "targetgroup/monitor-tg-oregon/187abe6f7eb2404c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/monitor-tg-oregon/187abe6f7eb2404c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "monitor-tg-oregon",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "monitor_tg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/monitor-tg-virginia/9bd526456e7bfe83",
            "arn_suffix": "targetgroup/monitor-tg-virginia/9bd526456e7bfe83",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/monitor-tg-virginia/9bd526456e7bfe83",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "monitor-tg-virginia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "openvpn_tg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/openvpn-tg-oregon/6e72dcda2b6c3dfd",
            "arn_suffix": "targetgroup/openvpn-tg-oregon/6e72dcda2b6c3dfd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/openvpn-tg-oregon/6e72dcda2b6c3dfd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "openvpn-tg-oregon",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "openvpn_tg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/openvpn-tg-virginia/0120a628be72f468",
            "arn_suffix": "targetgroup/openvpn-tg-virginia/0120a628be72f468",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/openvpn-tg-virginia/0120a628be72f468",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "openvpn-tg-virginia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pentaho_tg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/pentaho-tg-oregon/f2b682f2db84abab",
            "arn_suffix": "targetgroup/pentaho-tg-oregon/f2b682f2db84abab",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/pentaho-tg-oregon/f2b682f2db84abab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pentaho-tg-oregon",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pentaho_tg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/pentaho-tg-virginia/b415081e31d44099",
            "arn_suffix": "targetgroup/pentaho-tg-virginia/b415081e31d44099",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/pentaho-tg-virginia/b415081e31d44099",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pentaho-tg-virginia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sonarqube_tg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/sonarqube-tg-oregon/5804a266b8c3c7ce",
            "arn_suffix": "targetgroup/sonarqube-tg-oregon/5804a266b8c3c7ce",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/sonarqube-tg-oregon/5804a266b8c3c7ce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sonarqube-tg-oregon",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sonarqube_tg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/sonarqube-tg-virginia/a49dfc54405ec207",
            "arn_suffix": "targetgroup/sonarqube-tg-virginia/a49dfc54405ec207",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/sonarqube-tg-virginia/a49dfc54405ec207",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sonarqube-tg-virginia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tickets_tg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/tickets-tg-oregon/7b3370261dd6fb23",
            "arn_suffix": "targetgroup/tickets-tg-oregon/7b3370261dd6fb23",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/tickets-tg-oregon/7b3370261dd6fb23",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tickets-tg-oregon",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tickets_tg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/tickets-tg-virginia/9156881092cf5459",
            "arn_suffix": "targetgroup/tickets-tg-virginia/9156881092cf5459",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "88",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/tickets-tg-virginia/9156881092cf5459",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tickets-tg-virginia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "gitlab_attachment_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/gitlab-tg-oregon/e4cc7768ab9cc7c5-2024062804483551440000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/gitlab-tg-oregon/e4cc7768ab9cc7c5",
            "target_id": "i-0ca1e6dda7c61db95"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.gitlab_oregon",
            "aws_lb_target_group.gitlab_tg_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.gitlab_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "gitlab_attachment_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/gitlab-tg-virginia/c2b4b69bbe641375-2024062804483358420000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/gitlab-tg-virginia/c2b4b69bbe641375",
            "target_id": "i-019137a0a4b4aa216"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.gitlab_virginia",
            "aws_lb_target_group.gitlab_tg_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.gitlab_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jasper_attachment_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/jasper-tg-oregon/ccc66bd142cf48a5-2024062804483459180000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/jasper-tg-oregon/ccc66bd142cf48a5",
            "target_id": "i-07adc090ef48e9391"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.jasper_oregon",
            "aws_lb_target_group.jasper_tg_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.jasper_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jasper_attachment_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/jasper-tg-virginia/cfa06967def0ae3f-2024062804483287400000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/jasper-tg-virginia/cfa06967def0ae3f",
            "target_id": "i-0b0c54e4be50e10e8"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.jasper_virginia",
            "aws_lb_target_group.jasper_tg_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.jasper_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "monitor_attachment_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/monitor-tg-oregon/187abe6f7eb2404c-2024062804483492870000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/monitor-tg-oregon/187abe6f7eb2404c",
            "target_id": "i-03526c966a9aa97d7"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.monitor_oregon",
            "aws_lb_target_group.monitor_tg_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.monitor_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "monitor_attachment_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/monitor-tg-virginia/9bd526456e7bfe83-2024062804483324260000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/monitor-tg-virginia/9bd526456e7bfe83",
            "target_id": "i-0f08719ffd8e46d49"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.monitor_virginia",
            "aws_lb_target_group.monitor_tg_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.monitor_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "openvpn_attachment_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/openvpn-tg-oregon/6e72dcda2b6c3dfd-2024062804483479420000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/openvpn-tg-oregon/6e72dcda2b6c3dfd",
            "target_id": "i-0e14eb3e85fce373e"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.openvpn_oregon",
            "aws_lb_target_group.openvpn_tg_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.openvpn_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "openvpn_attachment_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/openvpn-tg-virginia/0120a628be72f468-20240628044834223800000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/openvpn-tg-virginia/0120a628be72f468",
            "target_id": "i-0d4fb2bfb3241d0dd"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.openvpn_virginia",
            "aws_lb_target_group.openvpn_tg_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.openvpn_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pentaho_attachment_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/pentaho-tg-oregon/f2b682f2db84abab-20240628044846920200000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/pentaho-tg-oregon/f2b682f2db84abab",
            "target_id": "i-06e7565473ca21ebc"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.pentaho_oregon",
            "aws_lb_target_group.pentaho_tg_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.pentaho_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pentaho_attachment_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/pentaho-tg-virginia/b415081e31d44099-20240628044834412000000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/pentaho-tg-virginia/b415081e31d44099",
            "target_id": "i-0ae381057bbedc55e"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.pentaho_virginia",
            "aws_lb_target_group.pentaho_tg_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.pentaho_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sonarqube_attachment_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/sonarqube-tg-oregon/5804a266b8c3c7ce-2024062804484564900000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/sonarqube-tg-oregon/5804a266b8c3c7ce",
            "target_id": "i-0169b3090f7b9ec94"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.sonarqube_oregon",
            "aws_lb_target_group.sonarqube_tg_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.sonarqube_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sonarqube_attachment_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/sonarqube-tg-virginia/a49dfc54405ec207-2024062804483411240000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/sonarqube-tg-virginia/a49dfc54405ec207",
            "target_id": "i-084f64220b520b655"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.sonarqube_virginia",
            "aws_lb_target_group.sonarqube_tg_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.sonarqube_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tickets_attachment_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/tickets-tg-oregon/7b3370261dd6fb23-2024062804483515710000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/tickets-tg-oregon/7b3370261dd6fb23",
            "target_id": "i-06321a06c43ca9dce"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.tickets_oregon",
            "aws_lb_target_group.tickets_tg_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_security_group.tickets_sg_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tickets_attachment_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/tickets-tg-virginia/9156881092cf5459-2024062804483390420000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/tickets-tg-virginia/9156881092cf5459",
            "target_id": "i-036126ba698240d39"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_iam_role.ssm_role",
            "aws_instance.tickets_virginia",
            "aws_lb_target_group.tickets_tg_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_security_group.tickets_sg_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-05498d34e44e6abf7",
            "description": "ALB Security Group Oregon",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05498d34e44e6abf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sg_oregon",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security Group Oregon"
            },
            "tags_all": {
              "Name": "ALB Security Group Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-08a432090cdf052de",
            "description": "ALB Security Group Virginia",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a432090cdf052de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security Group Virginia"
            },
            "tags_all": {
              "Name": "ALB Security Group Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-09fb3f7f34491f544",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fb3f7f34491f544",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "oregon_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion SG Oregon"
            },
            "tags_all": {
              "Name": "Bastion SG Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-07c1106b9fd4b8519",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c1106b9fd4b8519",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion SG Virginia"
            },
            "tags_all": {
              "Name": "Bastion SG Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitlab_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-0dc926e3645b544e4",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc926e3645b544e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gitlab_sg_oregon",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GitLab SG Oregon"
            },
            "tags_all": {
              "Name": "GitLab SG Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_oregon",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitlab_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-063577edb438bf2bb",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063577edb438bf2bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gitlab_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GitLab SG Virginia"
            },
            "tags_all": {
              "Name": "GitLab SG Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_virginia",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jasper_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-069142975000ff51e",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069142975000ff51e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jasper_sg_oregon",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jasper SG Oregon"
            },
            "tags_all": {
              "Name": "Jasper SG Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_oregon",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jasper_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-0be5b58ad167eab02",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be5b58ad167eab02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jasper_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jasper SG Virginia"
            },
            "tags_all": {
              "Name": "Jasper SG Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_virginia",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitor_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-0791452ed58c68b33",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0791452ed58c68b33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "monitor_sg_oregon",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Monitor SG Oregon"
            },
            "tags_all": {
              "Name": "Monitor SG Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_oregon",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitor_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-03a8b8765eb606162",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a8b8765eb606162",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "monitor_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Monitor SG Virginia"
            },
            "tags_all": {
              "Name": "Monitor SG Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_virginia",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openvpn_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-05c39f2668111c218",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c39f2668111c218",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "openvpn_sg_oregon",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "OpenVPN SG Oregon"
            },
            "tags_all": {
              "Name": "OpenVPN SG Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_oregon",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openvpn_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-03c9795fe92ce8023",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c9795fe92ce8023",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "openvpn_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "OpenVPN SG Virginia"
            },
            "tags_all": {
              "Name": "OpenVPN SG Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_virginia",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pentaho_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-04b09e73b2184547a",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b09e73b2184547a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pentaho_sg_oregon",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Pentaho SG Oregon"
            },
            "tags_all": {
              "Name": "Pentaho SG Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_oregon",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pentaho_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-01bf347e8964c56f3",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bf347e8964c56f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pentaho_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Pentaho SG Virginia"
            },
            "tags_all": {
              "Name": "Pentaho SG Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_virginia",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-04bff7dd3576012e8",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bff7dd3576012e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sonarqube_sg_oregon",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SonarQube SG Oregon"
            },
            "tags_all": {
              "Name": "SonarQube SG Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_oregon",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-0c3b6c731188d61de",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3b6c731188d61de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sonarqube_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SonarQube SG Virginia"
            },
            "tags_all": {
              "Name": "SonarQube SG Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_virginia",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tickets_sg_oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:security-group/sg-0f126e7762ce760a0",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f126e7762ce760a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05498d34e44e6abf7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tickets_sg_oregon",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tickets SG Oregon"
            },
            "tags_all": {
              "Name": "Tickets SG Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_oregon",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tickets_sg_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:security-group/sg-09d715c9132c70d20",
            "description": "Allow HTTP, HTTPS and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d715c9132c70d20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a432090cdf052de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tickets_sg_virginia",
            "name_prefix": "",
            "owner_id": "993407081893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tickets SG Virginia"
            },
            "tags_all": {
              "Name": "Tickets SG Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_virginia",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_oregon",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:loadbalancer/app/alb-oregon/d925022452e8baa5",
            "arn_suffix": "app/alb-oregon/d925022452e8baa5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-oregon-1169188284.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:loadbalancer/app/alb-oregon/d925022452e8baa5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-oregon",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05498d34e44e6abf7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01817d65c64969452"
              },
              {
                "subnet_id": "subnet-0f2b290b202b5fc66"
              }
            ],
            "subnets": [
              "subnet-01817d65c64969452",
              "subnet-0f2b290b202b5fc66"
            ],
            "tags": {
              "Name": "ALB Oregon"
            },
            "tags_all": {
              "Name": "ALB Oregon"
            },
            "vpc_id": "vpc-0c06e1fc5d857672b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_oregon",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "certificate_arn": "arn:aws:acm:us-west-2:993407081893:certificate/dba99dd9-7251-45e5-af91-97ea58552dcd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:listener/app/alb-oregon/d925022452e8baa5/08c83845caddeb8e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:loadbalancer/app/alb-oregon/d925022452e8baa5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "Name": "https"
            },
            "tags_all": {
              "Name": "https"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.alb_logs_oregon",
            "aws_security_group.alb_sg_oregon",
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.alb_oregon.aws_lb.this",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_oregon",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/tg-oregon/58b5ce14af7a5a8d",
            "arn_suffix": "targetgroup/tg-oregon/58b5ce14af7a5a8d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993407081893:targetgroup/tg-oregon/58b5ce14af7a5a8d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-oregon",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ALB Oregon"
            },
            "tags_all": {
              "Name": "ALB Oregon"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "aws_wafv2_ip_set.allowed_ips_oregon",
            "aws_wafv2_web_acl.web_acl_oregon",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_virginia",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-logs-isolated-virginia",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:loadbalancer/app/alb-virginia/e348e6e55c119c5c",
            "arn_suffix": "app/alb-virginia/e348e6e55c119c5c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-virginia-746689616.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:loadbalancer/app/alb-virginia/e348e6e55c119c5c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-virginia",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08a432090cdf052de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ceca3826249fe29b"
              },
              {
                "subnet_id": "subnet-0efe26cfac1b525a2"
              }
            ],
            "subnets": [
              "subnet-0ceca3826249fe29b",
              "subnet-0efe26cfac1b525a2"
            ],
            "tags": {
              "Name": "ALB Virginia"
            },
            "tags_all": {
              "Name": "ALB Virginia"
            },
            "vpc_id": "vpc-04e192450c711bde3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_virginia",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "certificate_arn": "arn:aws:acm:us-east-1:993407081893:certificate/e3109390-1044-48fe-9078-fc7b519ff5aa",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:listener/app/alb-virginia/e348e6e55c119c5c/90465d13488ca339",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:loadbalancer/app/alb-virginia/e348e6e55c119c5c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "Name": "https"
            },
            "tags_all": {
              "Name": "https"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.alb_logs_virginia",
            "aws_security_group.alb_sg_virginia",
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.alb_virginia.aws_lb.this",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_virginia",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/tg-virginia/1d7cac42e09515c0",
            "arn_suffix": "targetgroup/tg-virginia/1d7cac42e09515c0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993407081893:targetgroup/tg-virginia/1d7cac42e09515c0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-virginia",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ALB Virginia"
            },
            "tags_all": {
              "Name": "ALB Virginia"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "aws_wafv2_ip_set.allowed_ips_virginia",
            "aws_wafv2_web_acl.web_acl_virginia",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_oregon",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-029f08e44712561f0",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-01817d65c64969452",
              "subnet-0f2b290b202b5fc66"
            ],
            "tags": {
              "Name": "transit-gateway-attachment"
            },
            "tags_all": {
              "Name": "transit-gateway-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0356d0a11933d0023",
            "vpc_id": "vpc-0c06e1fc5d857672b",
            "vpc_owner_id": "993407081893"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.oregon",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_virginia",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0e6d005ca53dc592f",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0ceca3826249fe29b",
              "subnet-0efe26cfac1b525a2"
            ],
            "tags": {
              "Name": "transit-gateway-attachment"
            },
            "tags_all": {
              "Name": "transit-gateway-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0e95f762736327645",
            "vpc_id": "vpc-04e192450c711bde3",
            "vpc_owner_id": "993407081893"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.virginia",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07dd2e49e25d34a7b",
            "domain": "vpc",
            "id": "eipalloc-07dd2e49e25d34a7b",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-212-48-124.us-west-2.compute.amazonaws.com",
            "public_ip": "34.212.48.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-west-2-nat-eip"
            },
            "tags_all": {
              "Name": "us-west-2-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:internet-gateway/igw-09c2d6f6d34d11794",
            "id": "igw-09c2d6f6d34d11794",
            "owner_id": "993407081893",
            "tags": {
              "Name": "igw-us-west-2"
            },
            "tags_all": {
              "Name": "igw-us-west-2"
            },
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07dd2e49e25d34a7b",
            "association_id": "eipassoc-0d299f27a70046914",
            "connectivity_type": "public",
            "id": "nat-02c37569270c534e6",
            "network_interface_id": "eni-0fd4bb18198129b95",
            "private_ip": "10.1.1.85",
            "public_ip": "34.212.48.124",
            "subnet_id": "subnet-01817d65c64969452",
            "tags": {
              "Name": "us-west-2-nat-gateway"
            },
            "tags_all": {
              "Name": "us-west-2-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc_oregon.aws_eip.nat",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:route-table/rtb-01f26a6b5002dfbc0",
            "id": "rtb-01f26a6b5002dfbc0",
            "owner_id": "993407081893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02c37569270c534e6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-us-west-2"
            },
            "tags_all": {
              "Name": "private-rt-us-west-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_oregon.aws_eip.nat",
            "module.vpc_oregon.aws_nat_gateway.nat",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:route-table/rtb-0267c0cceb1d35577",
            "id": "rtb-0267c0cceb1d35577",
            "owner_id": "993407081893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c2d6f6d34d11794",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-us-west-2"
            },
            "tags_all": {
              "Name": "public-rt-us-west-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_oregon.aws_internet_gateway.this",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07611a0781f23e971",
            "route_table_id": "rtb-01f26a6b5002dfbc0",
            "subnet_id": "subnet-08eef6069a7a631a5"
          },
          "dependencies": [
            "module.vpc_oregon.aws_eip.nat",
            "module.vpc_oregon.aws_nat_gateway.nat",
            "module.vpc_oregon.aws_route_table.private",
            "module.vpc_oregon.aws_subnet.private",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8189f7264a9ed4e",
            "route_table_id": "rtb-01f26a6b5002dfbc0",
            "subnet_id": "subnet-0478be62e374a4e76"
          },
          "dependencies": [
            "module.vpc_oregon.aws_eip.nat",
            "module.vpc_oregon.aws_nat_gateway.nat",
            "module.vpc_oregon.aws_route_table.private",
            "module.vpc_oregon.aws_subnet.private",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0957cfacb4877f992",
            "route_table_id": "rtb-0267c0cceb1d35577",
            "subnet_id": "subnet-01817d65c64969452"
          },
          "dependencies": [
            "module.vpc_oregon.aws_internet_gateway.this",
            "module.vpc_oregon.aws_route_table.public",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064a3197cf1a2adbd",
            "route_table_id": "rtb-0267c0cceb1d35577",
            "subnet_id": "subnet-0f2b290b202b5fc66"
          },
          "dependencies": [
            "module.vpc_oregon.aws_internet_gateway.this",
            "module.vpc_oregon.aws_route_table.public",
            "module.vpc_oregon.aws_subnet.public",
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:subnet/subnet-08eef6069a7a631a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eef6069a7a631a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993407081893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-0-us-west-2"
            },
            "tags_all": {
              "Name": "private-0-us-west-2"
            },
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:subnet/subnet-0478be62e374a4e76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0478be62e374a4e76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993407081893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1-us-west-2"
            },
            "tags_all": {
              "Name": "private-1-us-west-2"
            },
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:subnet/subnet-01817d65c64969452",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01817d65c64969452",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993407081893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-0-us-west-2"
            },
            "tags_all": {
              "Name": "public-0-us-west-2"
            },
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:subnet/subnet-0f2b290b202b5fc66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2b290b202b5fc66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993407081893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1-us-west-2"
            },
            "tags_all": {
              "Name": "public-1-us-west-2"
            },
            "vpc_id": "vpc-0c06e1fc5d857672b"
          },
          "dependencies": [
            "module.vpc_oregon.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_oregon",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993407081893:vpc/vpc-0c06e1fc5d857672b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0bcdb471447d8b51f",
            "default_route_table_id": "rtb-0cdc0a759059e4c90",
            "default_security_group_id": "sg-08e951b6acb688f34",
            "dhcp_options_id": "dopt-51edb735",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c06e1fc5d857672b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cdc0a759059e4c90",
            "owner_id": "993407081893",
            "tags": {
              "Name": "vpc-us-west-2"
            },
            "tags_all": {
              "Name": "vpc-us-west-2"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d286f782329704bf",
            "domain": "vpc",
            "id": "eipalloc-0d286f782329704bf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-196-97-5.compute-1.amazonaws.com",
            "public_ip": "34.196.97.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-east-1-nat-eip"
            },
            "tags_all": {
              "Name": "us-east-1-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:internet-gateway/igw-0dbbdda4315a33217",
            "id": "igw-0dbbdda4315a33217",
            "owner_id": "993407081893",
            "tags": {
              "Name": "igw-us-east-1"
            },
            "tags_all": {
              "Name": "igw-us-east-1"
            },
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d286f782329704bf",
            "association_id": "eipassoc-07d6d8c1e16bef610",
            "connectivity_type": "public",
            "id": "nat-08fd0257ba9003e80",
            "network_interface_id": "eni-0750babdb67599310",
            "private_ip": "10.0.1.214",
            "public_ip": "34.196.97.5",
            "subnet_id": "subnet-0efe26cfac1b525a2",
            "tags": {
              "Name": "us-east-1-nat-gateway"
            },
            "tags_all": {
              "Name": "us-east-1-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc_virginia.aws_eip.nat",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:route-table/rtb-0cf577d7cdc6bfd65",
            "id": "rtb-0cf577d7cdc6bfd65",
            "owner_id": "993407081893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08fd0257ba9003e80",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-us-east-1"
            },
            "tags_all": {
              "Name": "private-rt-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_virginia.aws_eip.nat",
            "module.vpc_virginia.aws_nat_gateway.nat",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:route-table/rtb-018c89f7de236b137",
            "id": "rtb-018c89f7de236b137",
            "owner_id": "993407081893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbbdda4315a33217",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-us-east-1"
            },
            "tags_all": {
              "Name": "public-rt-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_virginia.aws_internet_gateway.this",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b920f67eea41056c",
            "route_table_id": "rtb-0cf577d7cdc6bfd65",
            "subnet_id": "subnet-0da12565126f67b41"
          },
          "dependencies": [
            "module.vpc_virginia.aws_eip.nat",
            "module.vpc_virginia.aws_nat_gateway.nat",
            "module.vpc_virginia.aws_route_table.private",
            "module.vpc_virginia.aws_subnet.private",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a43b79746428a46b",
            "route_table_id": "rtb-0cf577d7cdc6bfd65",
            "subnet_id": "subnet-0ee64f443bb39cd45"
          },
          "dependencies": [
            "module.vpc_virginia.aws_eip.nat",
            "module.vpc_virginia.aws_nat_gateway.nat",
            "module.vpc_virginia.aws_route_table.private",
            "module.vpc_virginia.aws_subnet.private",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00322555223da9878",
            "route_table_id": "rtb-018c89f7de236b137",
            "subnet_id": "subnet-0efe26cfac1b525a2"
          },
          "dependencies": [
            "module.vpc_virginia.aws_internet_gateway.this",
            "module.vpc_virginia.aws_route_table.public",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2dbdb2a33de3170",
            "route_table_id": "rtb-018c89f7de236b137",
            "subnet_id": "subnet-0ceca3826249fe29b"
          },
          "dependencies": [
            "module.vpc_virginia.aws_internet_gateway.this",
            "module.vpc_virginia.aws_route_table.public",
            "module.vpc_virginia.aws_subnet.public",
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:subnet/subnet-0da12565126f67b41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da12565126f67b41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993407081893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-0-us-east-1"
            },
            "tags_all": {
              "Name": "private-0-us-east-1"
            },
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:subnet/subnet-0ee64f443bb39cd45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee64f443bb39cd45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993407081893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1-us-east-1"
            },
            "tags_all": {
              "Name": "private-1-us-east-1"
            },
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:subnet/subnet-0efe26cfac1b525a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efe26cfac1b525a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993407081893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-0-us-east-1"
            },
            "tags_all": {
              "Name": "public-0-us-east-1"
            },
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:subnet/subnet-0ceca3826249fe29b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceca3826249fe29b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993407081893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1-us-east-1"
            },
            "tags_all": {
              "Name": "public-1-us-east-1"
            },
            "vpc_id": "vpc-04e192450c711bde3"
          },
          "dependencies": [
            "module.vpc_virginia.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_virginia",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993407081893:vpc/vpc-04e192450c711bde3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0487560ca0f20744f",
            "default_route_table_id": "rtb-0f0ea54a0781cd608",
            "default_security_group_id": "sg-0a27c61ab9bc45447",
            "dhcp_options_id": "dopt-12589a75",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e192450c711bde3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0ea54a0781cd608",
            "owner_id": "993407081893",
            "tags": {
              "Name": "vpc-us-east-1"
            },
            "tags_all": {
              "Name": "vpc-us-east-1"
            }
          }
        }
      ]
    }
  ]
}